<resources>
    <string name="app_name">Markdown</string>
    <string name="chooseFile">Выбрать файл</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scrollview">ScrollView</string>
    <string name="link_to_file">Ссылка на файл</string>
    <string name="load_file">Скачать файл</string>
    <string name="error_occurred_when_load">Произошла ошибка при загрузке данных</string>
    <string name="linear_layout">linear layout</string>
    <string name="edit">Редактировать</string>
    <string name="empty" />
    <string name="save">Сохранить</string>
</resources>